# fable-tv

./: .gitignore  README.md  RELEASING.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
dev/: sample.m3u  seed.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: catalog_api.rs  commands.rs  db.rs  epg.rs  error.rs  lib.rs  m3u.rs  main.rs  models.rs  security.rs  sync.rs  util.rs
src-tauri/src/repo/: catalog.rs  epg.rs  home.rs  import_export.rs  mod.rs  search.rs  settings.rs  sources.rs  user_data.rs
src/components/: BrandLogo.tsx  Cards.tsx  Chrome.tsx  ErrorBoundary.tsx  Hero.tsx  Layout.tsx  PlaylistManager.tsx  ProfileModal.tsx  RankedRow.tsx  Row.tsx  SourceModal.tsx  TopNav.tsx  VirtualGrid.tsx  ui.tsx
src/dev/: mock.ts
src/lib/: api.ts  avatars.tsx  gsap.ts  i18n.tsx  nav.ts  profileAccent.ts  types.ts  utils.ts
src/pages/: CatalogPage.tsx  Favorites.tsx  History.tsx  Home.tsx  LiveTV.tsx  MovieDetail.tsx  Player.tsx  Profiles.tsx  Search.tsx  SeriesDetail.tsx  Settings.tsx  Sources.tsx  WhoIsWatching.tsx
