[package]
name = "fable-tv"
version = "0.2.1"
description = "Fable TV - private, local-first IPTV library for your own legal sources"
edition = "2021"
rust-version = "1.80"

[lib]
name = "fable_tv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
quick-xml = "0.36"
regex = "1"
unicode-normalization = "0.1"
flate2 = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
